a tag href fixed

--- a/standard-post.html
+++ b/standard-post.html
@@ -4,7 +4,7 @@
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Favicon-->
-		<link rel="shortcut icon" href="img/fav.png">
+		<link rel="shortcut icon" href="./img/fav.png">
 		<!-- Author Meta -->
 		<meta name="author" content="colorlib">
 		<!-- Meta Description -->
@@ -52,7 +52,7 @@
 						<div class="container">
 							<div class="row justify-content-between align-items-center">
 								<div class="col-lg-4 col-md-4 col-sm-12 logo-left no-padding">
-									<a href="/index.html">
+									<a href="./index.html">
 										<img class="img-fluid logo-pa-poder" src="img/logo.png" alt="">
 									</a>
 								</div>
@@ -66,20 +66,20 @@
 						<div class="row align-items-center justify-content-between">
 							<nav id="nav-menu-container">
 								<ul class="nav-menu">
-									<li class="/menu-active"><a href="/">Inicio</a></li>
-									<li><a href="/archive.html">Perfil</a></li>
+									<li class="/menu-active"><a href="./index.html">Inicio</a></li>
+									<li><a href="./archive.html">Perfil</a></li>
 									<li class="#"><a href="">Categorias</a>
 									<ul>
-										<li><a href="/standard-post.html">Noticias</a></li>
-										<li><a href="/standard-post.html">Humor</a></li>
-										<li><a href="standard-post.html">Fotografía</a></li>
-										<li><a href="standard-post.html">Videos</a></li>
-										<li><a href="standard-post.html">Podcast</a></li>
-										<li><a href="standard-post.html">Reportaje</a></li>
-										<li><a href="standard-post.html">Mi Gente</a></li>
+										<li><a href="./standard-post.html">Noticias</a></li>
+										<li><a href="./standard-post.html">Humor</a></li>
+										<li><a href="./standard-post.html">Fotografía</a></li>
+										<li><a href="./standard-post.html">Videos</a></li>
+										<li><a href="./standard-post.html">Podcast</a></li>
+										<li><a href="./standard-post.html">Reportaje</a></li>
+										<li><a href="./standard-post.html">Mi Gente</a></li>
 									</ul>
 								</li>
-								<li><a href="/about.html">Nuestro Equipo</a></li>
+								<li><a href="./about.html">Nuestro Equipo</a></li>
 							</ul>
 							</nav><!-- #nav-menu-container -->
 							<div class="navbar-right">
@@ -105,7 +105,7 @@
 						<div class="col-lg-12">
 							<div class="hero-nav-area">
 								<h1 class="text-white">Título de la Publicación</h1>
-								<p class="text-white link-nav"><a href="index.html">Inicio </a>  <span class="lnr lnr-arrow-right"></span><a href="#">Categorias </a><span class="lnr lnr-arrow-right"></span><a href="standard-post.html">Categoria de la Publicación </a></p>
+								<p class="text-white link-nav"><a href="./index.html">Inicio </a>  <span class="lnr lnr-arrow-right"></span><a href="#">Categorias </a><span class="lnr lnr-arrow-right"></span><a href="./standard-post.html">Categoria de la Publicación </a></p>
 							</div>
 						</div>
 						<div class="col-lg-12">
@@ -256,7 +256,7 @@
 										</ul>
 									</div>
 									<div class="details">
-										<a href="image-post.html">
+										<a href="./image-post.html">
 											<h4 class="mt-20">Mi CIudad</h4>
 										</a>
 										<ul class="meta">
@@ -274,7 +274,7 @@
 												<img src="img/e2.jpg" alt="">
 											</div>
 											<div class="detail">
-												<a href="image-post.html">
+												<a href="./image-post.html">
 													<h6>
 														Como visitar Una Isla Paradisiaca
 													</h6>
@@ -352,7 +352,7 @@
 										<img src="img/m1.jpg" alt="">
 									</div>
 									<div class="details">
-										<a href="image-post.html">
+										<a href="./image-post.html">
 											<h6>Educación Politica</h6>
 										</a>
 										<ul class="meta">
@@ -366,7 +366,7 @@
 										<img src="img/m2.jpg" alt="">
 									</div>
 									<div class="details">
-										<a href="image-post.html">
+										<a href="./image-post.html">
 											<h6>Un buen Café en Juan Valdez</h6>
 										</a>
 										<ul class="meta">
@@ -380,7 +380,7 @@
 										<img src="img/m3.jpg" alt="">
 									</div>
 									<div class="details">
-										<a href="image-post.html">
+										<a href="./image-post.html">
 											<h6>Los Empleos favoritos de los milenials </h6>
 										</a>
 										<ul class="meta">
@@ -394,7 +394,7 @@
 										<img src="img/m4.jpg" alt="">
 									</div>
 									<div class="details">
-										<a href="image-post.html">
+										<a href="./image-post.html">
 											<h6>
 													Duque anuncia brigadas y operativos para combatir el turismo sexual en Colombia
 											</h6>
