--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 				<div class="container">
 					<div class="row justify-content-between align-items-center">
 						<div class="col-lg-4 col-md-4 col-sm-12 logo-left no-padding">
-							<a href="/index.html">
+							<a href="./index.html">
 								<img class="img-fluid logo-pa-poder" src="img/logo.png" alt="">
 							</a>
 						</div>
@@ -66,20 +66,20 @@
 				<div class="row align-items-center justify-content-between">
 					<nav id="nav-menu-container">
 						<ul class="nav-menu">
-							<li class="/menu-active"><a href="/">Inicio</a></li>
-							<li><a href="/archive.html">Perfil</a></li>
+							<li class="/menu-active"><a href="./index.html">Inicio</a></li>
+							<li><a href="./archive.html">Perfil</a></li>
 							<li class="#"><a href="">Categorias</a>
 							<ul>
-								<li><a href="/standard-post.html">Noticias</a></li>
-								<li><a href="/standard-post.html">Humor</a></li>
-								<li><a href="/image-post.html">Fotografía</a></li>
-								<li><a href="/video-post.html">Videos</a></li>
-								<li><a href="/audio-post.html.html">Podcast</a></li>
-								<li><a href="/reportaje.html">Reportaje</a></li>
-								<li><a href="/reportaje.html">Mi Gente</a></li>
+								<li><a href="./standard-post.html">Noticias</a></li>
+								<li><a href="./standard-post.html">Humor</a></li>
+								<li><a href="./standard-post.html">Fotografía</a></li>
+								<li><a href="./standard-post.html">Videos</a></li>
+								<li><a href="./standard-post.html">Podcast</a></li>
+								<li><a href="./standard-post.html">Reportaje</a></li>
+								<li><a href="./standard-post.html">Mi Gente</a></li>
 							</ul>
 						</li>
-						<li><a href="/about.html">Nuestro Equipo</a></li>
+						<li><a href="./about.html">Nuestro Equipo</a></li>
 					</ul>
 					</nav><!-- #nav-menu-container -->
 					<div class="navbar-right">
@@ -105,7 +105,7 @@
 						<div class="col-lg-12">
 							<div class="hero-nav-area">
 								<h1 class="text-white">Nuestro Equipo</h1>
-								<p class="text-white link-nav"><a href="index.html">Inicio  </a>  <span class="lnr lnr-arrow-right"></span><a href="about.html">Nuestro Equipo </a></p>
+								<p class="text-white link-nav"><a href="./index.html">Inicio  </a>  <span class="lnr lnr-arrow-right"></span><a href="about.html">Nuestro Equipo </a></p>
 							</div>
 						</div>
 					</div>
