--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Favicon-->
-		<link rel="shortcut icon" href="img/fav.png">
+		<link rel="shortcut icon" href="./img/fav.png">
 		<!-- Author Meta -->
 		<meta name="author" content="colorlib">
 		<!-- Meta Description -->
@@ -52,7 +52,7 @@
 				<div class="container">
 					<div class="row justify-content-between align-items-center">
 						<div class="col-lg-4 col-md-4 col-sm-12 logo-left no-padding">
-							<a href="/index.html">
+							<a href="./index.html">
 								<img class="img-fluid logo-pa-poder" src="img/logo.png" alt="">
 							</a>
 						</div>
@@ -66,20 +66,20 @@
 				<div class="row align-items-center justify-content-between">
 					<nav id="nav-menu-container">
 						<ul class="nav-menu">
-							<li class="/menu-active"><a href="/">Inicio</a></li>
-							<li><a href="/archive.html">Perfil</a></li>
+							<li class="/menu-active"><a href="./index.html">Inicio</a></li>
+							<li><a href="./archive.html">Perfil</a></li>
 							<li class="#"><a href="">Categorias</a>
 							<ul>
-								<li><a href="/standard-post.html">Noticias</a></li>
-								<li><a href="/standard-post.html">Humor</a></li>
-								<li><a href="standard-post.html">Fotografía</a></li>
-								<li><a href="standard-post.html">Videos</a></li>
-								<li><a href="standard-post.html">Podcast</a></li>
-								<li><a href="standard-post.html">Reportaje</a></li>
-								<li><a href="standard-post.html">Mi Gente</a></li>
+								<li><a href="./standard-post.html">Noticias</a></li>
+								<li><a href="./standard-post.html">Humor</a></li>
+								<li><a href="./standard-post.html">Fotografía</a></li>
+								<li><a href="./standard-post.html">Videos</a></li>
+								<li><a href="./standard-post.html">Podcast</a></li>
+								<li><a href="./standard-post.html">Reportaje</a></li>
+								<li><a href="./standard-post.html">Mi Gente</a></li>
 							</ul>
 						</li>
-						<li><a href="/about.html">Nuestro Equipo</a></li>
+						<li><a href="./about.html">Nuestro Equipo</a></li>
 					</ul>
 					</nav><!-- #nav-menu-container -->
 					<div class="navbar-right">
@@ -111,7 +111,7 @@
 								<ul class="tags">
 									<li><a href="#">Reportaje</a></li>
 								</ul>
-								<a href="standard-post.html">
+								<a href="./standard-post.html">
 									<h3>Hombre Trabajando</h3>
 								</a>
 								<ul class="meta">
@@ -131,7 +131,7 @@
 									<ul class="tags">
 										<li><a href="#">Fotografía</a></li>
 									</ul>
-									<a href="standard-post.html">
+									<a href="./standard-post.html">
 										<h4>Cartagena Nocturna</h4>
 									</a>
 									<ul class="meta">
@@ -150,7 +150,7 @@
 									<ul class="tags">
 										<li><a href="#">Mi Gente</a></li>
 									</ul>
-									<a href="standard-post.html">
+									<a href="./standard-post.html">
 										<h4>Pescador</h4>
 									</a>
 									<ul class="meta">
@@ -197,7 +197,7 @@
 										<ul class="tags">
 											<li><a href="#">Mi Gente</a></li>
 										</ul>
-										<a href="standard-post.html">
+										<a href="./standard-post.html">
 											<h3>Hombre del Mercado</h3>
 										</a>
 										<ul class="meta">
@@ -219,7 +219,7 @@
 											</ul>
 										</div>
 										<div class="details">
-											<a href="standard-post.html">
+											<a href="./standard-post.html">
 												<h4>Daniel Samper le propuso al presidente santos ser youtuber después del 7 de Agosto</h4>
 											</a>
 											<ul class="meta">
@@ -243,7 +243,7 @@
 											</ul>
 										</div>
 										<div class="details">
-											<a href="standard-post.html">
+											<a href="./standard-post.html">
 												<h4>Mirada de una niña en el Mercado de Bazurto</h4>
 											</a>
 											<ul class="meta">
@@ -274,7 +274,7 @@
 											</ul>
 										</div>
 										<div class="col-lg-7 post-right">
-											<a href="standard-post.html">
+											<a href="./standard-post.html">
 												<h4>Líderes sociales (El factor Santiago Nasar)</h4>
 											</a>
 											<ul class="meta">
